basilisk/native_libs/libbasilisk_matcher.h

extern int BasiliskMatcherCreate(void);
extern int BasiliskMatcherAddPattern(int id, char* pattern);
extern void BasiliskMatcherBuild(int id);
extern char* BasiliskMatcherSearch(int id, char* text);
extern void BasiliskMatcherDestroy(int id);
extern double BasiliskDetectRefusal(char* text);
extern char* BasiliskDetectSensitiveData(char* text);
extern void BasiliskFreeStr(char* s);