basilisk/native_libs/libbasilisk_fuzzer.h

extern char* BasiliskMutate(char* input, int mutationType);
extern char* BasiliskMutateRandom(char* input);
extern char* BasiliskCrossover(char* parent1, char* parent2, int strategy);
extern char* BasiliskHomoglyphTransform(char* input, double rate);
extern char* BasiliskZeroWidthInject(char* input);
extern int BasiliskCountRunes(char* input);
extern void BasiliskFreeString(char* s);
extern int BasiliskGetMutationCount(void);